Update manifest: add 3 new images to year 99

--- a/manifest.json
+++ b/manifest.json
@@ -4062,9 +4062,9 @@
     "20251229_1.jpg",
     "20251230_1.jpg",
     "20251231_1.jpg",
-    "20260101_1.jpg",
-    "20260102_1.jpg",
-    "20260103_1.jpg",
+    "20260101_1a.png",
+    "20260102_1a.png",
+    "20260103_1a.png",
     "20260104_1.jpg",
     "20260105_1.jpg",
     "20260106_1.jpg",
@@ -4102,6 +4102,9 @@
     "1980-2021-06-20_16-30-49_IST_UTC_3.jpg",
     "1980-2021-06-20_16-30-49_IST_UTC_4.jpg",
     "1980-2021-06-20_16-30-49_IST_UTC_5.jpg",
+    "20260101_1.jpg",
+    "20260102_1.jpg",
+    "20260103_1.jpg",
     "2195-2022-01-21_23-52-57_EST_UTC_2.jpg",
     "2195-2022-01-21_23-52-57_EST_UTC_3.jpg",
     "2203-2022-01-29_18-03-34_EST_UTC.jpg",
